--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ Cython==0.29.21
 dataclasses==0.6
 decorator==4.4.2
 defusedxml==0.6.0
-https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.7/index.whl
+-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.7/index.html
+detectron2==0.3+cpu
 entrypoints==0.3
 filelock==3.0.12
 future==0.18.2
